--- a/templates/index.html
+++ b/templates/index.html
@@ -1,69 +1,40 @@
 <!DOCTYPE html>
 <html>
-<title>Marketing Template</title>
+<title>Temperature &amp; Humidity</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
-.mySlides {display:none}
-.w3-tag, .fa {cursor:pointer}
-.w3-tag {height:15px;width:15px;padding:0;margin-top:6px}
-</style>
-<script>
-    const webSocket = new WebSocket("ws://localhost:8888/websocket/");
-    const app = {
-        numSuccesses: 0,
-        numTrials: 0
-    }
-    webSocket.onopen = (event) => {
-        console.log(webSocket);
-        console.log('webSocket.onopen fired')
-        webSocket.send("Hello? Is anyone there?");
-    }
-    webSocket.onmessage = (event) => {
-        if (!`${event.data}`.startsWith('You said')) {
-            const data = +event.data;
-            
-            app.numSuccesses += data;
-            app.numTrials += 1
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jura">
+<link rel="stylesheet" href="{{ static_url('css/styles.css')}}">
 
-            const alpha = 2 + app.numSuccesses;
-            const beta = 2 + app.numTrials - app.numSuccesses;
-            const mean = app.numSuccesses / app.numTrials;
-            console.log(`α = ${alpha}; β = ${beta}; mean = ${mean}`);
-            const temperatureLabel = document.getElementById("temperatureLabel");
-            const temperatureUnit = document.getElementById("temperatureUnit");
-            const humidityLabel = document.getElementById("humidityLabel");
-            temperatureLabel.textContent = alpha
-            humidityLabel.textContent = beta
-        }
-        else {
-            console.log(event.data)
-        }
-    }
-
-    webSocket.onclose = (event) => {
-        console.log('webSocket.onclose fired')
-    }
-    webSocket.onerror = (event) => {
-        console.log('webSocket.onerror fired')
-    }
-</script>
 <body>
+    <main class="container">
 
-<!-- Links (sit on top) -->
-<div class="w3-top">
-  <div class="w3-row w3-large w3-light-grey">
-    <div class="w3-col s3">
-      <span>{{ _("temperature") }}</span> <span id="temperatureLabel"></span>°<span id="temperatureUnit">F</span>
-    </div>
-    <div class="w3-col s3">
-      <span>{{ _("humidity") }}</span> <span id="humidityLabel"></span>%
-    </div>
-  </div>
-</div>
+        <div class="status connection">
+            <span class="unknown" id="connectionStatus">&#x25cf; UNKNOWN</span>
+        </div>
+
+        <div class="status message">
+            <span class="unknown" id="statusMessage"></span>
+        </div>
+        
+        <div class="readout temperature" id="temperatureRow">
+            <span class="image" id="temperatureImage"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 512"><path fill="#C4CAD0" d="M184 384c0 30.928-25.072 56-56 56s-56-25.072-56-56c0-22.338 13.082-41.615 32-50.604V216c0-13.255 10.745-24 24-24s24 10.745 24 24v117.396c18.918 8.989 32 28.266 32 50.604zm40-84.653c19.912 22.563 32 52.194 32 84.653 0 70.696-57.302 128-128 128-.299 0-.61-.001-.909-.003C56.789 511.509-.357 453.636.002 383.333.166 351.135 12.225 321.756 32 299.347V96c0-53.019 42.981-96 96-96s96 42.981 96 96v203.347zM216 384c0-37.167-21.152-57.235-32-69.527V96c0-30.878-25.122-56-56-56-30.879 0-56 25.122-56 56v218.473c-10.977 12.439-31.811 32.281-31.999 69.064-.247 48.291 39.091 88.125 87.367 88.461L128 472c48.524 0 88-39.477 88-88z"/></svg></span> <span class="label" id="temperatureLabel">—</span><span class="symbol" id="temperatureSymbol">°</span><span class="unit" id="temperatureUnit">F</span>
+        </div>
+
+        <div class="readout humidity" id="humidityRow">
+            <span class="image" id="humidityImage"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path fill="#C4CAD0" d="M223.9 22.1c-8.7-28.8-53.9-30.1-63.8 0C109.1 179.8 0 222.7 0 333.9 0 432.3 85.9 512 192 512s192-79.7 192-178.1c0-111.7-108.9-153.3-160.1-311.8zM96 288c0-17.7 14.3-32 32-32s32 14.3 32 32-14.3 32-32 32-32-14.3-32-32zm49.5 131.8c-2.8 3.5-7.8 4-11.2 1.2l-12.5-10c-3.4-2.8-4-7.8-1.2-11.2l118-147.5c2.8-3.4 7.8-4 11.2-1.2l12.5 10c3.5 2.8 4 7.8 1.2 11.2l-118 147.5zM256 416c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32z"/></svg></span> <span class="label" id="humidityLabel"></span><span class="symbol" id="humiditySymbol">%</span>
+        </div>
+
+        <div class="interactions">
+            <button id="generate1">Get 1 Readout</button>
+            <button id="generateN">Get 10 Readouts</button>
+            <button id="resetKey">Flush Redis DB</button>
+        </div>
+    </main>
+    <footer>
+        <div class="hidden" id="locale">{{ _(locale) }}</div>
+    </footer>
+<script src="{{static_url('js/scripts.js')}}"></script>
 </body>
+
 </html>
