--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -9,41 +9,60 @@ button {
 }
 
 html { background: #1e1b18; color: #c4cad0;}
+.hidden {
+    display: none;
+    visibility: hidden;
+}
 
+header, 
+footer {
+    display: block;
+    padding: 16px;
+    text-align: center;
+    width: 100%;
+}
+footer {
+    position: fixed;
+    bottom: 0;
+}
+
+.interactions button {
+    margin-bottom: 0 4px 16px 4px;
+    min-height: 24px;
+    width: auto;
+}
 main.container {
     color: #1789FC;
     display: grid;
     grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(7,min-content);
     margin: 0 auto;
     max-width: 640px;
-    place-content: stretch;
-    place-items: stretch;
 }
 .status {
+    border-bottom: 1px dotted #1789FC;
     font-size: 16px;
     grid-row: 1;
     padding: 8px;
 }
-
 .status.connection {
-    grid-column: 1;
+    grid-column: 1 / 2;
     text-align: center;
 }
 .status.message {
     grid-column: 2 / 7;
+    text-align: right;
 }
 .readout {
     color: #C4CAD0;
     font-size: 72px;
     grid-column: 1 / 4;
     line-height: 1;
-    min-height: 128px;
     text-align: center;
     width: 100%;
 }
-.status span {
-    display: block;
-    text-align: center;
+.readout.humidity {
+    grid-column: 4 / 7;
 }
 .readout span {
     display: inline-block;
@@ -59,26 +78,23 @@ main.container {
 .readout svg path {
     fill: #c4cad0;
 }
-.readout.temperature {
+.readout.temperature, 
+.readout.humidity {
     grid-row: 2;
 }
-.readout.humidity {
+.stats,
+.graph {
+    font-size: 14px;
+}
+.readout.temperature.stats,
+.readout.humidity.stats {
     grid-row: 3;
 }
-.interactions {
-    border: 1px solid purple;
-    display: grid;
-    grid-column: 4 / 7;
-    grid-row: 2 / 4;
-    place-self: stretch;
-    place-content: stretch;
-    place-items: stretch;
+.readout.temperature.graph,
+.readout.humidity.graph {
+    grid-row: 4
 }
-.interactions button {
-    margin-bottom: 16px;
-    min-height: 24px;
-    width: 100%;
-}
+
 .temperature.toohigh,
 .temperature.toohigh svg path {
     color: #db4437;
