Fixed bug in generating new readouts when current unit is Celsius

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
             <button id="generateN">Get 10 Readouts</button>
             <button id="calculateStats">Get Min/Max/Avg</button>
             <button id="convertTemperature">Convert Temperature</button>
-            <button id="resetKey">Flush Redis DB</button>
+            <button id="resetKey">Reset App</button>
             <button id="quit">Exit Program</button>
         </div>
     </header>
