--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -8,13 +8,14 @@ button {
     font-family: "Jura", sans-serif;
 }
 
-html { background: #1e1b18; color: #c4cad0;}
+html { background: #1e1b18;}
 .hidden {
     display: none;
     visibility: hidden;
 }
 header, 
 footer {
+    color: #c4cad0;
     display: block;
     padding: 16px;
     text-align: center;
@@ -60,7 +61,6 @@ main.container.quit {
     text-align: right;
 }
 .readout {
-    color: #C4CAD0;
     font-size: 72px;
     grid-column: 1 / 4;
     line-height: 1;
@@ -74,14 +74,18 @@ main.container.quit {
     display: inline-block;
     vertical-align: middle;
 }
-.readout svg {
+.readout.data,
+.readout.stats {
+    color: #C4CAD0;
+}
+.readout.data svg {
     display: block;
     height: 100%;
     min-height: 24px;
     min-width: 24px;
     width: auto;
 }
-.readout svg path {
+.readout.data svg path {
     fill: #c4cad0;
 }
 .readout.temperature, 
@@ -95,6 +99,7 @@ main.container.quit {
 .readout.temperature.stats,
 .readout.humidity.stats {
     grid-row: 3;
+    min-height: 24px;
 }
 .readout.temperature.graph,
 .readout.humidity.graph {
